--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -8,15 +8,25 @@
     =fa_icon "chevron-left",class:"back"
     =fa_icon "chevron-right",class:"next"
   %ul.contentBox
-    %li.contentBox__image.active
+    %li.contentBox__info.active
+      -# .contentBox__info--heading
+      -#   = @content.infomations.first.heading
       =image_tag(@content.infomations.first.image.to_s)
-    %li.contentBox__image
+    %li.contentBox__info
+      -# .contentBox__info--heading
+      -#   = @content.infomations.second.heading
       =image_tag(@content.infomations.second.image.to_s)
-    %li.contentBox__image
+    %li.contentBox__info
+      -# .contentBox__info--heading
+      -#   = @content.infomations.third.heading
       =image_tag(@content.infomations.third.image.to_s)
-    %li.contentBox__image
+    %li.contentBox__info
+      -# .contentBox__info--heading
+      -#   = @content.infomations.fourth.heading
       =image_tag(@content.infomations.fourth.image.to_s)
-    %li.contentBox__image
+    %li.contentBox__info
+      -# .contentBox__info--heading
+      -#   = @content.infomations.fifth.heading
       =image_tag(@content.infomations.fifth.image.to_s)
   %ul.btnWrapper
     %li.btnWrapper--btn.active
