--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -15,6 +15,7 @@
     margin-right: auto;
   }
   &--link,&--git{
+    font-size: 2.5vh;
     margin-left: 2vw;
     height: 7vh;
     &:hover{
@@ -50,15 +51,20 @@
   height: 70vh;
   width: 90vw;
   margin: 2vh auto;
-  &__image{
+  &__info{
     display: none;
-    box-shadow: 0 0 15px $gray;
     width: 80%;
     height: 100%;
     margin: 0 auto;
+    position: relative;
+    &:hover{
+      filter: grayscale(90%);
+    }
     img{
-    height: 100%;
-    width: 100%;
+      height: 100%;
+      width: 100%;
+      box-shadow: 0 0 10px $gray;
+      filter: grayscale(30%);
     }
   }
   .active{
