--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -28,10 +28,10 @@
             .main__contentsBlock__lower__right--text
               小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
               %br ディープな街西成で、元気に,平和に育ちました。
-              4つ上の姉の影響で、ヒーロー物には興味がなく、
-              %br バービー人形で遊んでいることが多かったそうです。
-              恥ずかしい。
-            .main__contentsBlock__lower__right--photo
+              「はるか彼方、大空へ」という想いをこめて
+              %br この"カナタ"名前がつけられました。気に入っています。
+              この頃から飛んでますね。
+            =image_tag("/uploads/images/baby.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents2------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -67,7 +67,7 @@
               %br 人と深く関わることが苦手だった私が、
               一人一人と深く関わり、一人一人に真摯に向き合う。
               %br ということに大きな価値を感じるようになりました。
-            .main__contentsBlock__lower__right--photo
+            =image_tag("/uploads/images/IMG_3818.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents4------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -80,14 +80,13 @@
           .main__contentsBlock__lower__left
           .main__contentsBlock__lower__right
             .main__contentsBlock__lower__right--text
-              モテたい。
-              %br そんな不純な動機で働き始めた、スターバックス。
-              ここでは一生寄り添っていきたい趣味と出会うことができました。
-              %br コーヒーです。黒い苦い液体。
-              こんなものでさえ、理解しきれない程の奥深さがあることを知り、
-              %br 一つのものを突き詰めていく喜びの第一歩を
-              スターバックスは与えてくれました。モテませんでした。
-            .main__contentsBlock__lower__right--photo
+              モテたい。そんな不純な動機で働き始めた、スターバックス。
+              %br ここでは一生寄り添っていきたい趣味と出会うことができました。
+              コーヒーです。黒い苦い液体。
+              %br こんなものでさえ、理解しきれない程の奥深さがあることを知り、
+              一つのものを突き詰めていく喜びの第一歩を
+              %br スターバックスは与えてくれました。モテませんでした。
+            =image_tag("/uploads/images/starbacks.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents4------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -106,7 +105,7 @@
               %br 口をつければ崩れてしまう。その一瞬のためだけに、
               些細なこだわりをいくつも詰め込み、より良いものを目指す。
               %br こだわりを持って、取り組み続けることの楽しさを知りました。
-            .main__contentsBlock__lower__right--photo
+            =image_tag("/uploads/images/latteart.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents5------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
