--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -1,13 +1,14 @@
 #index{
   width: 80vw;
   margin: 0 auto;
-// top-contents================================================
+// top-contents------------------------------------------------
 .top{
   scroll-snap-align: start;
   width: 100%;
   height: 100vh;
   position: relative;
   &__nameBox{
+    display: none;
     @include position-center;
     &--engineer{
       font-size: 20px;
@@ -19,7 +20,7 @@
     }
   }
 }
-// profile================================================
+// profile------------------------------------------------
 .profile{
   scroll-snap-align: start;
   padding-top: 8vh;
@@ -104,8 +105,7 @@
     }
   }
 }
-
-// works================================================
+// works------------------------------------------------
 .works{
   scroll-snap-align: start;
   padding-top: 8vh;
