--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -99,10 +99,11 @@
           padding: 2vh 0 8.5vh 5vh;
         }
         &--photo{
-          background-color: blue;
+          filter: grayscale(30%);
+          box-shadow: 0 0 10px $black;
           margin-right: 5vw;
           width: 30%;
-          height: 100%;
+          height: 80%;
         }
       }
     }
