--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,20 +1,19 @@
 #scroll
-  = render "/templates/header"
   #backColor
   #plofile
     -# top================================================
     .top
       .top__profile
         Profile
+      .top__photo
+        =image_tag("uploads/images/kanata.jpg")
+      .top__text
+        まず初めに、私のポートフォリオをご覧いただきありがとうございます。
+        %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
+        わたしがどこで生まれ、育ち、何を経験してきたのか。
+        %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
     -# main================================================
     .main
-      .main__textBlock
-        .main__textBlock--text
-          まず初めに、私のポートフォリオをご覧いただきありがとうございます。
-          %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
-          わたしがどこで生まれ、育ち、何を経験してきたのか。
-          %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
-      -# contents1------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
         .main__contentsBlock__upper
@@ -123,5 +122,5 @@
               一つのものをつきつめ、
               %br 一瞬のためにこだわりを持ち続ける。
               これからは、そんなエンジニアとして成長していきます。
-  -# footer================================================
-  = render "/templates/footer"
+      -# footer================================================
+      = render "/templates/footer"
