--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -24,22 +24,46 @@
     @include position-center;
     font-size: 5vh;
     color: $black;
+    display: none;
+  }
+  &__photo{
+    @include position-center;
+    width: 100%;
+    height: 55vh;
+    display: none;
+    &::after {
+      content: '';
+      position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      box-shadow: inset 0 0 15px 20px white;
+    }
+    img{
+      opacity: 0.8;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__text{
+    position: absolute;
+      top: 50%;
+      left: 5%;
+      transform: translateY(-50%);
+    width: 60%;
+    height: 25vh;
+    text-align: center;
+    line-height: 6vh;
+    font-size: 2vh;
+    display: none;
   }
 }
 // main================================================
 .main{
   margin-bottom: 10vh;
   width: 100%;
-  &__textBlock{
-    padding-bottom: 30vh;
-    width: 100%;
-    background-color:white;
-    &--text{
-    text-align: center;
-    line-height: 6vh;
-    font-size: 2vh;
-    }
-  }
+  display: none;
   &__contentsBlock{
     scroll-snap-align: center;
     width: 100%;
