--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -6,7 +6,7 @@
       .top__profile
         Profile
       .top__photo
-        =image_tag("uploads/images/kanata.jpg")
+        =image_tag("/uploads/images/myphoto.jpg")
       .top__text
         まず初めに、私のポートフォリオをご覧いただきありがとうございます。
         %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
@@ -28,7 +28,7 @@
               小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
               %br ディープな街西成で、元気に,平和に育ちました。
               「はるか彼方、大空へ」という想いをこめて
-              %br この"カナタ"名前がつけられました。気に入っています。
+              %br この"カナタ"という名前がつけられました。気に入っています。
               この頃から飛んでますね。
             =image_tag("/uploads/images/baby.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents2------------------------------------------------
