--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -53,6 +53,8 @@
     }
   }
 }
+.main{
+  display: none;
 // slills================================================
 .skills{
   padding-top: 8vh;
@@ -171,6 +173,8 @@
       }
     }
   }
+}
+// ================================================
 }
 // ================================================
 }
