--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -6,7 +6,7 @@
       .top__profile
         Profile
       .top__photo
-        =image_tag("/uploads/images/myphoto.jpg")
+        =image_tag("myphoto.jpg")
       .top__text
         まず初めに、私のポートフォリオをご覧いただきありがとうございます。
         %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
@@ -30,7 +30,7 @@
               「はるか彼方、大空へ」という想いをこめて
               %br この"カナタ"という名前がつけられました。気に入っています。
               この頃から飛んでますね。
-            =image_tag("/uploads/images/baby.jpg",class:"main__contentsBlock__lower__right--photo")
+            =image_tag("baby.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents2------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -66,7 +66,7 @@
               %br 人と深く関わることが苦手だった私が、
               一人一人と深く関わり、一人一人に真摯に向き合う。
               %br ということに大きな価値を感じるようになりました。
-            =image_tag("/uploads/images/IMG_3818.jpg",class:"main__contentsBlock__lower__right--photo")
+            =image_tag("IMG_3818.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents4------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -85,7 +85,7 @@
               %br こんなものでさえ、理解しきれない程の奥深さがあることを知り、
               一つのものを突き詰めていく喜びの第一歩を
               %br スターバックスは与えてくれました。モテませんでした。
-            =image_tag("/uploads/images/starbacks.jpg",class:"main__contentsBlock__lower__right--photo")
+            =image_tag("starbacks.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents4------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
@@ -104,7 +104,7 @@
               %br 口をつければ崩れてしまう。その一瞬のためだけに、
               些細なこだわりをいくつも詰め込み、より良いものを目指す。
               %br こだわりを持って、取り組み続けることの楽しさを知りました。
-            =image_tag("/uploads/images/latteart.jpg",class:"main__contentsBlock__lower__right--photo")
+            =image_tag("latteart.jpg",class:"main__contentsBlock__lower__right--photo")
       -# contents5------------------------------------------------
       .main__contentsBlock
         .main__contentsBlock--btn
