--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "modules/profiles/index";
 // ------------------------------------------------
 @import "modules/templates/footer";
-@import "modules/templates/header";
+@import "modules/templates/login";
 // ================================================
 @import "font-awesome-sprockets";
 @import "font-awesome";
