--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -1,5 +1,5 @@
 #scroll
-  = render "/templates/header"
+  = render "/templates/login"
   #index
     -# top================================================
     .top
