--- a/app/views/templates/_login.html.haml
+++ b/app/views/templates/_login.html.haml
@@ -1,8 +1,7 @@
-#login
-  -if !User.exists?
-    =link_to("サインアップ",new_user_registration_path)
-  -elsif user_signed_in?
-    =link_to("ログアウト",destroy_user_session_path,method: :delete)
-  -else
-    =link_to("ログイン",new_user_session_path)
+-if !User.exists?
+  =link_to("サインアップ",new_user_registration_path,id:"login")
+-elsif user_signed_in?
+  =link_to("ログアウト",destroy_user_session_path,method: :delete,id:"login")
+-else
+  =link_to("ログイン",new_user_session_path,id:"login")
 
