--- a/app/views/templates/_header.html.haml
+++ b/app/views/templates/_header.html.haml
@@ -1,11 +1,11 @@
 #header
   .login
     -if !User.exists?
-      =link_to("サインアップ",new_user_registration_path)
+      =link_to("サインアップ",new_user_registration_path,class:"login--signedOut")
     -elsif !user_signed_in?
-      =link_to("ログイン",new_user_session_path)
+      =link_to("ログイン",new_user_session_path,class:"login--signedOut")
     -else
-      =link_to("ログアウト",destroy_user_session_path,method: :delete)
+      =link_to("ログアウト",destroy_user_session_path,method: :delete, class:"login--signedIn")
   -if user_signed_in?
     .menu
       .menu--category
