--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -51,10 +51,16 @@
           %br プログラミング学習に取り組んできました。
           未経験ではありますが、現時点での "オカヤマ カナタ" のスキルです。
         .skills__box
-          - @categories.each do |category|
-            =link_to(edit_category_path(category.id),class:"skills__box__content") do
-              .skills__box__content--name
-                = category.name
+          -if user_signed_in?
+            - @categories.each do |category|
+              =link_to(edit_category_path(category.id),class:"skills__box__content") do
+                .skills__box__content--name
+                  = category.name
+          -else
+            - @categories.each do |category|
+              .skills__box__content
+                .skills__box__content--name
+                  = category.name
       -# works================================================
       .works
         .works__hedding
