--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -7,6 +7,8 @@
   height: 100vh;
   position: relative;
   &__nameBox{
+    animation-name: blur-anime;
+    animation-duration: 5s;
     display: none;
     @include position-center;
     &--engineer{
@@ -173,4 +175,9 @@
 // ================================================
 }
 // ================================================
+}
+
+@keyframes blur-anime {
+  0% {filter: blur(15px);}
+  100% {filter: blur(0);}
 }
