--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/colors";
 @import "reset";
 @import "config/fonts";
+@import "config/animation";
 // ================================================
 @import "modules/contents/index";
 @import "modules/contents/show";
