--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -4,3 +4,9 @@
     left: 50%;
     transform: translateX(-50%)translateY(-50%);
 }
+
+@mixin animation-blur{
+  animation-name: blur-anime;
+  animation-duration: 5s;
+  display: none;
+}
