--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -1,10 +1,11 @@
+// 中央寄せ================================================
 @mixin position-center{
   position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%)translateY(-50%);
 }
-
+// トップテキストふわっと表示================================================
 @mixin animation-blur{
   animation-name: blur-anime;
   animation-duration: 5s;
