--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -17,16 +17,16 @@
   position: relative;
   background-color: #fff;
   &__profile{
+    @include animation-blur;
     @include position-center;
     font-size: 5vh;
     color: $black;
-    display: none;
   }
   &__photo{
+    @include animation-blur;
     @include position-center;
     width: 100%;
     height: 57vh;
-    display: none;
     &::after {
       content: '';
       position: absolute;
@@ -43,6 +43,7 @@
     }
   }
   &__text{
+    @include animation-blur;
     position: absolute;
       top: 50%;
       left: 5%;
@@ -52,7 +53,6 @@
     text-align: center;
     line-height: 6vh;
     font-size: 2vh;
-    display: none;
   }
 }
 // main================================================
