--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -125,6 +125,33 @@
       height: 100%;
       transition-duration: .3s;
     }
+    &__filter{
+      display: none;
+      position: absolute;
+        top: 0;
+      width:100%;
+      height: 100%;
+      background-color: rgba($black,0.7);
+      color: white;
+      font-size: 3vh;
+      &--name{
+        @include position-center;
+        text-align: center;
+        padding-top: 25%;
+        width: 96%;
+        height: 95%;
+        border: solid 3px white;
+      }
+      &--more{
+        position: absolute;
+          bottom: 3%;
+          right: 4%;
+      }
+    }
+
+
+
+
     &__textBlock{
       position: absolute;
         top: 0;
