--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -1,12 +1,18 @@
-=link_to(content_path(content.id))do
-  .works__contentsBox
-    =image_tag content.infomations.first.image.to_s,class:"works__contentsBox__photoBlock"
-    .works__contentsBox__textBlock
-      .works__contentsBox__textBlock--contentHedding
-        = content.name
-      .works__contentsBox__textBlock__categoryWrapper
-        - content.categories.each do |category|
-          .works__contentsBox__textBlock__categoryWrapper--category{style:"background-color:#{category.color.insert(-1,"99")}"}
-            = category.name
-      .works__contentsBox__textBlock--contentText
-        = content.infomations.first.text
+.works__contentsBox
+  =image_tag content.infomations.first.image.to_s,class:"works__contentsBox__photoBlock"
+  .works__contentsBox__filter
+    .works__contentsBox__filter--name
+      = "- #{content.name} -"
+    .works__contentsBox__filter--more
+      more
+
+
+  -# .works__contentsBox__textBlock
+  -#   .works__contentsBox__textBlock--contentHedding
+  -#     = content.name
+  -#   .works__contentsBox__textBlock__categoryWrapper
+  -#     - content.categories.each do |category|
+  -#       .works__contentsBox__textBlock__categoryWrapper--category{style:"background-color:#{category.color.insert(-1,"99")}"}
+  -#         = category.name
+  -#   .works__contentsBox__textBlock--contentText
+  -#     = content.infomations.first.text
