--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -154,14 +154,9 @@
         right: -45%;
       width: 45%;
       height: 100%;
-      background-color:white;
-      padding-left: 1vw;
-      &--contentHedding{
-        width: 100%;
-        height: 8vh;
-        line-height: 8vh;
-        font-size: 3vh;
-      }
+      background-color: rgba($black,0.7);
+      padding: 1vh;
+      color: white;
       &__categoryWrapper{
         width: 100%;
         height: 4vh;
@@ -169,21 +164,30 @@
         display: flex;
         justify-content: start;
         &--category{
+          background-color: #fff;
           border-radius: 5px;
           margin-right: 3%;
           text-align: center;
           width: 20%;
           height: 100%;
-          color: white;
         }
       }
       &--contentText{
+        // background-color: blue;
         padding: 2vh 1vh 0;
         width: 100%;
         height: 70%;
         font-size: 2vh;
         line-height: 4vh;
         word-break: break-all;
+      }
+      &--show{
+        position: absolute;
+          bottom: 0;
+          right: 0;;
+        width: 55%;
+        height: 10%;
+        font-size: 30px;
       }
     }
   }
