--- a/app/views/templates/_footer.html.haml
+++ b/app/views/templates/_footer.html.haml
@@ -3,10 +3,13 @@
     .footerLinks
       .footerLinks--profile
         Profile
+        .footerLinks--line
       .footerLinks--skills
         Skills
+        .footerLinks--line
       .footerLinks--works
         Works
+        .footerLinks--line
   - else
     .footerLinks
       =link_to("Back",root_path,class:"footerLinks--back")
