--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -116,9 +116,8 @@
     margin: 3vh auto 10vh;
     width: 70%;
     height: 55vh;
-    filter: grayscale(30%);
+    filter: grayscale(20%);
     position: relative;
-    box-shadow: 0 0 5px $l_gray;
     overflow: hidden;
     &__photoBlock{
       width: 100%;
@@ -131,8 +130,7 @@
         top: 0;
       width:100%;
       height: 100%;
-      background-color: rgba($black,0.7);
-      color: white;
+      color: $black;
       font-size: 3vh;
       &--name{
         @include position-center;
@@ -140,7 +138,8 @@
         padding-top: 25vh;
         width: 96%;
         height: 95%;
-        border: solid 3px white;
+        // border: solid 3px white;
+        background-color: rgba(white,0.8);
       }
       &--more{
         position: absolute;
@@ -183,11 +182,12 @@
       }
       &--show{
         position: absolute;
+        border: white solid 2px;
           bottom: 0;
           right: 0;;
-        width: 55%;
-        height: 10%;
-        font-size: 30px;
+        width: 40%;
+        height: 5%;
+        font-size: 20px;
       }
     }
   }
