--- a/app/assets/stylesheets/modules/templates/_footer.scss
+++ b/app/assets/stylesheets/modules/templates/_footer.scss
@@ -1,26 +1,33 @@
 #footer{
-  border-top: 1px solid $black;
-  margin: 0 auto ;
-  width: 20vw;
-  height: 25vh;
-  padding: 5vh;
-  color: $black;
-  font-size: 2vh;
+  background-color: black;
+  padding-top: 15vh;
+  width: 100vw;
+  height: 30vh;
   position: relative;
+  color: white;
   // ================================================
 .footerLinks{
-  @include position_center;
-  width: 120%;
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  &--back{
-  margin: 0 auto;
+  width: 100%;
+  height: 5vh;
+  font-size: 2.5vh;
+  position: relative;
+  &--profile{
+    position: absolute;
+      left: 40%;
   }
-  &--back,&--profile,&--skills,&--works{
-    &:hover{
-      border-bottom: 1px solid $black;
-    }
+  &--skills,&--back{
+    position: absolute;
+      left: 50%;
+  }
+  &--works{
+    position: absolute;
+      left: 60%;
+  }
+  &--line{
+    margin-top: 1vh;
+    background-color: white;
+    width: 2vw;
+    height: 2px;
   }
 }
   // ================================================
