--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,4 +1,4 @@
-#backColor
+-# #backColor
 #plofile
   -# top================================================
   .top
@@ -121,5 +121,5 @@
             一つのものをつきつめ、
             %br 一瞬のためにこだわりを持ち続ける。
             これからは、そんなエンジニアとして成長していきます。
-    -# footer================================================
-    = render "/templates/footer"
+-# footer================================================
+= render "/templates/footer"
