--- a/app/views/templates/_footer.html.haml
+++ b/app/views/templates/_footer.html.haml
@@ -1,16 +1,18 @@
 #footer
   -if request.path == root_path 
     .footerLinks
-      .footerLinks--profile
-        Profile
+      .footerLinks--profile.jumpBtn
+        PROFILE
         .footerLinks--line
-      .footerLinks--skills
-        Skills
+      .footerLinks--skills.jumpBtn
+        SKILLS
         .footerLinks--line
-      .footerLinks--works
-        Works
+      .footerLinks--works.jumpBtn
+        WORKS
         .footerLinks--line
   - else
     .footerLinks
-      =link_to("Back",root_path,class:"footerLinks--back")
+      .footerLinks--back.jumpBtn
+        =link_to("BACK",root_path)
+        .footerLinks--line
 
