--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,6 +2,7 @@ $black:rgb(50,50,50);
 $gray:rgb(175, 174, 174);
 $l_gray:rgb(226, 226, 226);
 $blue:rgb(196, 242, 252);
-
+$d_brown:rgb(207, 191, 177);
+$brown:rgb(238, 230, 224);
 
 
