--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -179,6 +179,7 @@
     margin:5vh 0 10vh;
     padding: 0 2vw;
     position: relative;
+    transition-duration: .5s;
     i{
       position: absolute;
         right: 10%;
