--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -172,10 +172,18 @@
               top: 50%;
               right: 0%;
               transform:translateY(-50%);
+              // background-color: black;
             width: 15%;
             height: 100%;
             font-size: 2em;
-            -webkit-text-stroke: 3.3px white;
+            overflow: hidden;
+            i{
+              -webkit-text-stroke: 3.3px white;
+              position: absolute;
+                top: 50%;
+                right: 30%;
+                transform: translateY(-50%);
+            }
           }
         }
       }
