--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -15,9 +15,10 @@
             -content.categories.each do|language|
               ="#{language.name}"
     .works__contentsBox__textBlock__right
-      .works__contentsBox__textBlock__right__moreBtn.linkBtn
-        %p SHOW MORE
-        .works__contentsBox__textBlock__right__moreBtn--icon.arrow
-          =fa_icon "long-arrow-right"
+      =link_to(content_path(content.id)) do
+        .works__contentsBox__textBlock__right__moreBtn.linkBtn
+          %p SHOW MORE
+          .works__contentsBox__textBlock__right__moreBtn--icon.arrow
+            =fa_icon "long-arrow-right"
 .separateLine
 
