--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -134,10 +134,11 @@
         line-height: 45vh;
         text-align: center;
         cursor: pointer;
-        font-weight: bold;
         font-size: 3vh;
-        color: $gray;
-        background-color: rgba($color:white, $alpha: 0.9);
+        color: $black;
+        background-color: rgba($color: white, $alpha: 0.95);
+        border: $black solid 0.5px;
+
       }
     }
     // textblock------------------------------------------------
