--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -28,14 +28,8 @@
     width: 100%;
     height: 6vh;
     line-height: 6vh;
-    display: flex;
-    justify-content: space-between;
-    &--left{
-      font-size: 3vh;
-    }
-    &--right{
-      font-size: 2vh;
-    }
+    font-size: 5vh;
+    text-align: center;
   }
   // main------------------------------------------------
   &__main{
@@ -57,17 +51,19 @@
 .skills{
   padding-top: 8vh;
   width: 100%;
+  text-align: center;
   &__hedding{
     width: 100%;
     height: 6vh;
-    font-size: 3vh;
+    font-size: 5vh;
     line-height: 6vh;
+    margin-bottom: 5vh;
   }
   &__topText{
     width: 80%;
     margin: 0 auto;
     margin-bottom: 2vh;
-    line-height: 6vh;
+    line-height: 4vh;
     font-size: 2vh;
   }
   &__box{
